Fixing display on smaller viewport

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ html, body {
   background: linear-gradient(0deg, rgba(0,0,0,.3) 0%, rgba(0,0,0,.3) 100%), url('./assets/wooden-bg.jpg');
   background-size: cover;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
